# smg_metric

./: LICENCE  README.md  pyproject.toml  test.py
smg_metrics/: __init__.py  __main__.py  _edit.py  _io.py  _stats.py  advanced.py  chord_accuracy.py  chord_recognition.py  chord_similarity.py  cli.py  distribution.py  muspy_ext.py  note_f1.py  out_of_key.py  pair.py  rhythmic.py  similarity.py  single.py  structural.py
smg_metrics/model_weights/: README.md
