[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smg-metrics"
version = "0.3.0"
description = "Objective evaluation metrics for Symbolic Music Generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "muspy>=0.5.0",
    "miditoolkit>=1.0",
    "pretty-midi>=0.2.10",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
smg-eval = "smg_metrics.cli:main"

[tool.setuptools.packages.find]
include = ["smg_metrics*"]
exclude = ["data*", "tests*", "__pycache__*"]
