[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smg-metrics"
version = "5.1.0"
description = "Objective evaluation metrics for Symbolic Music Generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Temmie Pratt"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "muspy>=0.5.0",
    "miditoolkit>=1.0",
    "pretty-midi>=0.2.10",
    "numpy>=1.24",
    "scipy>=1.10",
    "mir-eval>=0.7",
]

[project.urls]
Homepage = "https://github.com/OlyMarco/smg_metric"
Repository = "https://github.com/OlyMarco/smg_metric"
Issues = "https://github.com/OlyMarco/smg_metric/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
torch = ["torch>=2.0.0"]

[project.scripts]
smg-eval = "smg_metrics.cli:main"

[tool.setuptools.packages.find]
include = ["smg_metrics*"]
exclude = ["data*", "tests*", "__pycache__*"]

[tool.setuptools.package-data]
smg_metrics = ["py.typed", "model_weights/*"]
